# bix-plaza

./: .dockerignore  .env.example  .gitignore  .mypy.ini  .pdm-python  README.md  docker-compose.local.yml  pyproject.toml
.github/workflows/: dev.yml  django.yml
docker/local/django/: Dockerfile  start.sh
docker/local/django/celery/beat/: start.sh
docker/local/django/celery/worker/: start.sh
src/addresses/: admin.py  filters.py  models.py  permissions.py  serializers.py  views.py
src/addresses/migrations/: 0001_initial.py  0002_address_neighborhood_address_number_alter_address_id.py
src/bookings/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  views.py
src/bookings/migrations/: 0001_initial.py
src/config/: celery.py  router.py  settings.py  urls.py
src/hotels/: admin.py  filters.py  models.py  permissions.py  querysets.py  serializers.py  views.py
src/hotels/migrations/: 0001_initial.py
src/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  views.py
src/users/management/commands/: createdefaultgroups.py
src/users/migrations/: 0001_initial.py
tests/: conftest.py  settings.py
tests/test_addresses/: factories.py
tests/test_bookings/: conftest.py  factories.py
tests/test_hotels/: conftest.py  factories.py  test_models.py  test_permissions.py
tests/test_users/: factories.py  test_managers.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
tests/test_users/test_management/test_commands/: test_createdefaultgroups.py
